# OpenVINO-Mobilenetv2_SSD-MultiNCS2

./: COCO_OpenVINO_testresult.py  COCO_evaluate.py  COCO_noOpenVINO_testresult.py  README.md  opencv_dnn_ssd.py  openvino_multistick_accelerate.py  openvino_singlestick_sync.py
lrmodels/: README.md
multi-sticks optimization/: CMakeLists.txt  labels.txt  multi_stick_and_thread_3req.cpp  multi_stick_and_thread_4req.cpp  multi_stick_and_thread_async.cpp  multi_stick_and_thread_sync.cpp
pbmodels/: README.md
